# droidrun

./: CLAUDE.md  README.md  pyproject.toml
droidrun/: __init__.py
droidrun/tools/driver/: __init__.py  android.py
tests/: test_android_driver.py
